--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Lift settled concrete without tearing it out. LiftPro delivers fast-curing, long-lasting slab leveling for homes & businesses in St. Louis and Southern Illinois." />
     <meta name="keywords" content="Concrete Repair, Concrete Contractor, Concrete Lifting" />
-    <meta property="og:title" content="Concrete Lifting in Waterloo, IL" />
-    <title>Concrete Lifting in Waterloo, IL</title>
+    <meta property="og:title" content="Concrete Repair in Waterloo, IL" />
+    <title>Concrete Repair in Waterloo, IL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,10 +63,12 @@
    <p>&nbsp;</p>
 <!-- Hero Section -->
 <div class="hero">
-<h1>Concrete Lifting in Waterloo, IL</h1>
+<h1>Concrete Repair in Waterloo, IL</h1>
 <button>Click Here to Call Us: (618) 409-8288</button></div>
 <div class="container">
-<p>LiftPro Concrete Leveling &amp; Repair helps property owners across the St. Louis Metro area and surrounding Southern Illinois communities solve a common problem that never stays small&mdash;sunken, uneven concrete. Based in Waterloo, Illinois, LiftPro focuses on <a href="https://www.google.com/maps?cid=6652278406615569357">concrete lifting</a>, leveling, and repair for both residential and commercial surfaces. When a driveway starts dipping, a sidewalk creates a trip edge, or a patio slopes in the wrong direction, it doesn&rsquo;t just look bad. It changes how your property functions, how safe it feels, and how confidently you can use the spaces you rely on every day. LiftPro was built to deliver a repair option that makes sense for real people: faster than replacement, less disruptive, and designed to restore stability from the ground up. Concrete settlement usually starts underneath the slab, not on top of it. Water can wash away supporting soil, drainage issues can create voids, and the region&rsquo;s changing seasons can cause expansion and contraction that slowly shift the ground. Over time, even a strong slab can lose support and settle unevenly. LiftPro&rsquo;s work focuses on correcting underlying conditions by lifting the slab and stabilizing the base beneath it. The goal is a surface that looks more uniform, feels safer, and performs like it should&mdash;without turning the repair into a long, expensive construction event.</p>
+<p>LiftPro Concrete Leveling & Repair helps property owners across the St. Louis Metro area and surrounding Southern Illinois communities solve a common problem that never stays small—sunken, uneven concrete. Based in Waterloo, Illinois, LiftPro focuses on <a href="https://www.google.com/maps?cid=6652278406615569357">concrete repair</a>, leveling, and stabilization for both residential and commercial surfaces. When a driveway starts dipping, a sidewalk creates a trip edge, or a patio slopes in the wrong direction, it doesn’t just look bad. It changes how your property functions, how safe it feels, and how confidently you can use the spaces you rely on every day.
+<p></p>
+LiftPro was built to deliver a repair option that makes sense for real people: faster than replacement, less disruptive, and designed to restore stability from the ground up. Concrete settlement usually starts underneath the slab, not on top of it. Water can wash away supporting soil, drainage issues can create voids, and the region’s changing seasons can cause expansion and contraction that slowly shift the ground. Over time, even a strong slab can lose support and settle unevenly. LiftPro’s work focuses on correcting underlying conditions through concrete repair and stabilizing the base beneath it. The goal is a surface that looks more uniform, feels safer, and performs like it should—without turning the repair into a long, expensive construction event.</p>
 <br />
 <p><iframe style="border: 0;" src="https://liftpro-concrete-leveling-repair.blogspot.com/" width="725" height="450" frameborder="0"></iframe></p>
 <br />
@@ -93,6 +95,7 @@
 
 </body>
 </html>
+
 
 
 
