--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@ LiftPro was built to deliver a repair option that makes sense for real people: f
 <p><iframe style="border: 0;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.631279288836!2d-90.090238!3d38.254945899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8995ce095af7b%3A0x5c51a3f72d5293cd!2sLiftPro%20Concrete%20Leveling%20%26%20Repair!5e1!3m2!1sen!2s!4v1770874625180!5m2!1sen!2s" width="600" height="450" allowfullscreen="allowfullscreen"></iframe></p>
 <p>&nbsp;</p>
 <h4><strong>Check Availability</strong></h4>
-<p><iframe style="border: 0;" src="&lt;iframe src=" width="800" height="600" frameborder="0" scrolling="no"></iframe>" width="650" height="450" frameborder="0" scrolling="no"&gt;</p>
+<p><iframe src="https://calendar.google.com/calendar/embed?src=roberto.ramirez%40moreaboutbiz.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
 </div>
 
 </body>
 </html>
+
 
 
 
